--- a/Object Master/.project
+++ b/Object Master/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>ZooKeeper</name>
+	<name>Object Master</name>
 	<comment></comment>
 	<projects>
 	</projects>
